upgraded to JDK 22