@@ -3,11 +3,11 @@
 
 	<groupId>tech.bitey</groupId>
 	<artifactId>golpanama</artifactId>
-	<version>0.0.1</version>
+	<version>2024-03-26</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<javafx.version>21</javafx.version>
+		<javafx.version>22</javafx.version>
 		<package>${project.groupId}.${project.artifactId}</package>
 		<pattern>gosper_glider_gun</pattern>
 	</properties>
@@ -17,10 +17,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.11.0</version>
+				<version>3.13.0</version>
 				<configuration>
-					<release>21</release>
-					<compilerArgs>--enable-preview</compilerArgs>
+					<release>22</release>
 				</configuration>
 			</plugin>
 			<!-- execute LifeJavaFX -->
@@ -29,9 +28,6 @@
 				<artifactId>javafx-maven-plugin</artifactId>
 				<version>0.0.8</version>
 				<configuration>
-					<options>
-						<option>--enable-preview</option>
-					</options>
 					<mainClass>${package}.LifeJavaFX</mainClass>
 					<commandlineArgs>${pattern}</commandlineArgs>
 				</configuration>
